57. Integration Test for Controller

--- a/course-catalog-service/src/main/resources/application.yml
+++ b/course-catalog-service/src/main/resources/application.yml
@@ -1,8 +1,8 @@
-#spring:
-#  application:
-#    name: course-catalog.-service
-#message: Hello from default profile
-#
+spring:
+  application:
+    name: course-catalog-service
+message: Hello from default profile
+
 #---
 #spring:
 #  config:
